add all statc web page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,185 @@
     <!-- external css file link  -->
     <link rel="stylesheet" href="externl.css" type="text/css">
     <title>Leader-Board</title>
+    <!-- google font start -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <!-- google font end -->
+    <!-- fontawesome icon link start -->
+    <script src="https://kit.fontawesome.com/008098de76.js" crossorigin="anonymous"></script>
+    <!-- fontawesome icon link  end-->
 </head>
 <body>
+    <!-- header start  -->
+    <header>
+        <nav>
+            <ol class="ideap">
+                <li>
+                   <img src="images/icons/logo.png"  alt="">
+                </li>
+                <li class="idea">Idea</li>
+            </ol>
+            <ol>
+                <li>Home</li>
+                <li>About</li>
+                <li>Works</li>
+                <li><img src="images/icons/profile.png" alt=""></li>
+            </ol>
+        </nav>
+    </header>
+    <!-- header end  -->
+    <main>
+        <article class="TopPlayerAndTopBlog">
+             <div class="TopPlayerTitle">
+                    <h1>TopPlyer</h1> 
+                </div>
+            <section class="TopPlyer">            
+                <div class="player">
+                    <img src="images/players/player-1.png" alt="">
+                    <span class="playerName">Pro Sasel</span>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-2.png" alt="">
+                    <span class="playerName">Abu Sufian</span>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-3.png" alt="">
+                    <span class="playerName">Shajedul Karim</span>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-4.png" alt="">
+                    <span class="playerName">Maruf Ahmed</span>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-5.png" alt="">
+                    <span class="playerName">Mujahid</span>
+                </div>
+                <div class="player">
+                    <img src="images/players/player-6.png" alt="">
+                    <span class="playerName">John Smith</span>
+                </div>
+            </section>
+              <hr> 
+              <div class="TopBlogTitle">
+                        <h1>Top Blog</h1> 
+                    </div>
+            <section class="TopBlog">
+                    
+                    <div class="Blog">
+                        <img src="images/blogs/blog-1.png" alt="">
+                      <p class="BlogDescription">
+                        13 of My Favorite UI/UX Goodies
+                    </p>
+                        <span>By<b> Danny Sapio</b></span>
+                    </div>
+                    <div class="Blog">
+                        <img src="images/blogs/blog-2.png" alt="">
+                        <p class="BlogDescription">
+                            UI cheat sheet:
+                             list vs grids
+                        </p>
+                        <span>By<b> Tess Gadd</b></span>
+                    </div>
+                    <div class="Blog">
+                        <img src="images/blogs/blog-3.png" alt="">
+                        <p class="BlogDescription">
+                            7 typography tips 
+                            for interface design
+                        </p>
+                        <span>By<b> Jeremiah Lam</b></span>
+                    </div>
+                    <div class="Blog">
+                        <img src="images/blogs/blog-4.png" alt="">
+                        <p class="BlogDescription">
+                            Your logo is <br>
+                            copied
+                        </p>
+                        <span>By <b>Ferdinand vogler</b> </span>
+                    </div>                        
+            </section>
+        </article>
+        
+        <article class="LatesCourse">
+            <div class="CourseTitile">
+                <h1>Lates Course</h1>
+            </div>
+            <section class="courseContaner">
+            <div class="ReactCard">
+                <img src="images/courses/course-1.png" alt="">
+                <p class="CardDescription">
+                    React - The Complete Powerpoint 2020 
+                </p>
+                <b class="CardRaterName">Reed Krakoff.</b>              
+                  <div class="RatingStarAndWatching"> 
+                            <div class="starandrating">
+                                <img src="images/icons/star.png" alt="">
+                                <img src="images/icons/star.png" alt="">
+                                <img src="images/icons/star.png" alt="">
+                                <img src="images/icons/star.png" alt="">
+                                <i class="fa-solid fa-star-half-stroke icons" style="color: #eaeaea;"></i>
+                                <b class="fourp">4.5</b>      
+                            </div>  
+                            <div class="watchtime">
+                                <img src="images/icons/clock.png"  alt="">
+                                <b>1:30hr</b>
+                            </did>
+                        </div>       
+                </div>      
+            </div>
+
+            <div class="PowerPointCard">
+                    <img src="images/courses/course-2.png"  alt="">
+
+                    <p class="CardDescription">
+                        Powerpoint 2020 
+                        Master Powerpoint Cour
+                    </p>
+                    <b class="CardRaterName">Reed Krakoff.</b>
+                    <div class="RatingStarAndWatching"> 
+                             <div class="starandrating">
+                                    <img src="images/icons/star.png" alt="">
+                                    <img src="images/icons/star.png" alt="">
+                                    <img src="images/icons/star.png" alt="">
+                                    <img src="images/icons/star.png" alt="">
+                                    <i class="fa-solid fa-star-half-stroke icons" style="color: #eaeaea;"></i>
+                                    <b class="fourp">4.5</b>      
+                                </div>  
+                                <div class="watchtime">
+                                    <img src="images/icons/clock.png"  alt="">
+                                    <b>1:30hr</b>
+                                </did>
+                    </div>       
+                </div>       
+            </div>
+            <div class="JsCard">
+                <img src="images/courses/course-3.png"  alt="">
+
+                <p class="CardDescription">
+                    The Complete JavaScript 
+                    Course 2020
+                </p>
+                <b class="CardRaterName">Reed Krakoff.</b>
+                <P class="RatingStarAndWatching">
+                    <div class="RatingStarAndWatching"> 
+                        <div class="starandrating">
+                            <img src="images/icons/star.png" alt="">
+                            <img src="images/icons/star.png" alt="">
+                            <img src="images/icons/star.png" alt="">
+                            <img src="images/icons/star.png" alt="">
+                            <i class="fa-solid fa-star-half-stroke icons" style="color: #eaeaea;"></i>
+                            <b class="fourp">4.5</b>      
+                        </div>  
+                        <div class="watchtime">
+                            <img src="images/icons/clock.png"  alt="">
+                            <b>1:30hr</b>
+                        </did>
+                    </div>       
+               </div>   
+            </div>
+        </section>
+        </article>
+    </main>
 </body>
+
 </html>
